@@ -39,9 +39,6 @@
 #include "../../../Gui/View.h"
 
 
-#include "../../../Gui/Icons/images.cpp"
-
-
 //++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 //===========================================================================
